public/stylesheets/style.styl
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video 
  margin 0
  padding 0
  border 0
  font-size 100%
  font inherit
  vertical-align baseline

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section 
  display block

body 
  line-height 1
ol, ul 
  list-style none

blockquote, q 
  quotes none

blockquote:before, blockquote:after, q:before, q:after 
  content ''
  content none

table
  border-collapse collapse
  border-spacing 0

input[type='text'], textarea
  border 0

/** Layout Stuff **/
p 
  margin 11px 0

/** End Layout Stuff **/

/** Font Stuff **/
/** Font-scale: http://modularscale.com/scale/?px1=21&px2=&ra1=1.5&ra2=0 **/

basesize = 21px
firststep = 31.5px
secondstep = 47.25px
thirdstep = 70.875px
substep = 14px

@font-face {
  font-family: 'Permanent Marker';
  src: url('fonts/Permanent_Marker/PermanentMarker.ttf');
}

@font-face {
  font-family: 'Molengo';
  src: url('fonts/Molengo/Molengo-Regular.ttf');
}

h1, h2, h3, h4
  font-family 'Permanent Marker', arial, serif

body
  font-size 21px
  font-family 'Molengo', Helvetica, arial, sans-serif

h1
  font-size thirdstep
  padding 8.022px 4.958px
h2
  font-size secondstep
  padding 8.022px 4.958px

h3
  font-size basesize
  padding 6.222px 6.222px

h4
  font-size 14px
  padding 6.222px 6.222px  

/** End Font Stuff **/

/** Color Stuff **/
yellow = #f7cd25
darkbrown = #69372c
grocerybagbrown = #af977d
lightgrey = #dedede
lightblue = #97abb4

body
  background-color lightgrey

header
  background-color grocerybagbrown

  -moz-box-shadow 0px 2px 1px yellow
  box-shadow 0px 2px 1px yellow

header h1
  color #fff
  text-shadow 1px 2px 2px lightblue
  // filter: dropshadow(color=lightblue, offx=1, offy=2)
/** End Color Stuff **/

html, body
  height 100%

body
  text-align center

header
  padding 12.979px 8.022px
  height: 159.47px

#main  
  padding secondstep 0
  text-align left
  width 960px
  margin 0 auto

.start_planning
  text-align center

.meal_entry
  text-align center

.meal_wrapper
  clear both
  width auto
  margin 0 auto
  display inline-block
  br
    clear both

.meal_day, .ingredients_section
  height auto
  width 239.205px
  float left
  margin 14px 21px
  h3
    display inline-block
    font-size 16px
    padding 6.222px 4.11px
  input    
    margin 6.222px 0 3px 0
    padding 4px 2px
    width 140px
    float right
    font-family 'Molengo', Helvetica, Arial, sans-serif
  input.recipe
    float right
    width 233px
  textarea
    float right
    overflow-y hidden
    width 233px
    height 159.47px
    font-family 'Molengo', Helvetica, Arial, sans-serif
.meal_update
  float right

// Print stuff
#generate_print_sheet
  float right

// Hide ingredients until this feature works
#ingredients
  display none

#chat 
  transition margin-bottom 1s
  -moz-transition margin-bottom 1s
  -webkit-transition margin-bottom 1s
  -o-transition margin-bottom 1s

#chat:hover 
  margin-bottom 0

#chat
  background-color white
  padding-top 0
  margin-bottom -170px
  display none
  font-size 14px
  height 200px
  position fixed
  bottom 0px
  left 0
  width 100%

  div 
    overflow-y auto
    width 80%
    margin 0 auto
    height 140px
  
  input[type='text']
    border 1px solid #000
    width 80%

  p
    margin 0
    padding 8px 0
    background-color yellow
  ul 
    text-align left
    background-color #fff
    width 100%
  li 
    margin 8px 0

